# 589COCOMO54875628746

./: README.md  REPORT.md  palindrome_checker.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_palindrome_checker.py
