[project]
name = "task-manager-cocomo-project"
version = "1.0.0"
description = "A simple Python task manager application created for a COCOMO software engineering project."

requires-python = ">=3.9"

[project.scripts]
task-manager = "task_manager.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
